--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,20 @@
 body {
-	visibility: hidden;
 	font-family: sans-serif;
 	margin: 0px;
 	padding: 0px;
 	background: #333;
 	color: #eee;
+}
+
+#loading {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 1vh;
+	bottom: 1vh;
+	left: 1vw;
+	right: 1vw;
 }
 
 .page {
@@ -39,7 +49,14 @@ body {
 	position: fixed;
 	top: 0px;
 	height: 10vh;
-	font-size: 200%;
+}
+
+.page .header #back_icon {
+	height: 50%;
+}
+
+.page .header .app_title {
+	padding-left: 2vw;
 }
 
 .page .header_time_spacing {
@@ -68,13 +85,36 @@ body {
 }
 
 .page .section_title {
-	font-size: 100%;
+	font-size: 50%;
 	text-align: left;
 	border-bottom: solid 1px #eee;
 }
 
 .page .section {
 	font-size: 200%;
+}
+
+.page .grid {
+	display: grid;
+	width: 100%;
+	grid-gap: 1vmin 1vmin;
+	grid-template-columns: repeat(3, auto);
+	box-sizing: border-box;
+}
+
+.page .grid .app_icon {
+	position: relative;
+	aspect-ratio: 1;
+	background: #666;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+}
+
+.page .grid .app_text {
+	position: absolute;
+	right: 3px;
+	bottom: 0px;
 }
 
 .page .footer_spacing {
@@ -94,5 +134,5 @@ body {
 }
 
 .page .footer #home_drawericon {
-	font-size: 200%;
+	height: 50%;
 }
