--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body {
 
 .page .header #back_icon {
 	height: 50%;
+	cursor: pointer;
 }
 
 .page .header .app_title {
@@ -103,6 +104,7 @@ body {
 }
 
 .page .grid .app_icon {
+	cursor: pointer;
 	position: relative;
 	aspect-ratio: 1;
 	background: #666;
@@ -135,4 +137,5 @@ body {
 
 .page .footer #home_drawericon {
 	height: 50%;
+	cursor: pointer;
 }
