--- a/css/style.css
+++ b/css/style.css
@@ -96,9 +96,22 @@ body {
 	display: none;
 }
 
-.page .section#section_timers .delete-timer {
+.page .section#section_timers .timer * {
 	cursor: pointer;
 	padding-left: 1vw;
+	padding-right: 1vw;
+}
+
+.page .section#section_timers .timer {
+	display: flex;
+	flex-direction: row;
+	padding-left: 1vw;
+	padding-right: 1vw;
+}
+
+.page .section#section_timers .timer .name {
+	flex: 100%;
+	margin-right: 1vw;
 }
 
 .page .section {
@@ -106,7 +119,7 @@ body {
 	padding-bottom: 5vh;
 }
 
-.page .grid {
+.grid {
 	display: grid;
 	width: 100%;
 	grid-gap: 1vmin 1vmin;
