--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ button {
 }
 
 .page .header #back_icon {
-	height: 50%;
+	font-size: 200%;
 	cursor: pointer;
 }
 
@@ -206,6 +206,6 @@ button {
 }
 
 .page .footer #home_drawericon {
-	height: 50%;
+	font-size: 200%;
 	cursor: pointer;
 }
